# SparkySplody

./: Makefile  README.md  package-lock.json
backend/: __main__.py  main.py  pyproject.toml  transmit.py
firmware/: Robot.cpp  Robot.h  firmware.ino  robot_arm.ino
frontend/: package.json
frontend/src/: App.tsx  Form.tsx  Rectangles.module.css  Rectangles.tsx  styles.module.css
