[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jonathan Leeming <jonathan@leeming.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
serial = "^0.0.97"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
